src/test/ui/placement-syntax.stderr
error: emplacement syntax is obsolete (for now, anyway)
  --> $DIR/placement-syntax.rs:3:8
   |
LL |     if x<-1 {
   |        ^^^^
   |
   = note: for more information, see <https://github.com/rust-lang/rust/issues/27779#issuecomment-378416911>
help: if you meant to write a comparison against a negative value, add a space in between `<` and `-`
   |
LL |     if x< -1 {
   |         ^^^

error: aborting due to previous error

